# DocuWhisper

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: backend-ci.yml  backend-py-ci.yml  backend-rust-ci.yml  docker-image-backend.yml  docker-image-frontend.yml  docker-image.yml  frontend-ci.yml  frontend-py-ci.yml
backend/: .flake8  .gitignore  conftest.py  console.py  docker-compose.yml  main.ipynb  main.py  requirements.txt
backend/config/: config.development.toml  config.prod.toml  config.production.toml  config.test.toml
backend/data/test/embeddings/: Dracula.npy  (+2 more)
backend/evals/: Meta-Llama-3-8B-Instruct_1723076030.json  Mixtral-8x7B-Instruct-v0.json  TinyLlama-1.1B-Chat-v1.0_1723008065.json
backend/src/: document_loader.py  embeddings.py  initialize.py  llm.py  rag_agent.py  retriever.py  vector_store.py
backend/tests/: test_document_loader.py  test_embeddings.py  test_eval.py  test_llm.py  test_rag_agent.py  test_retriever.py  test_vector_store.py
backend/tests/utils/: mock_psycogp2.py
backend/utils/: Cargo.toml
config/: config.dev.toml  config.prod.toml
data/test/: gutenberg_urls.json
frontend/: app.py  conftest.py  utils.py
frontend-react/src/: App.tsx  index.tsx
frontend-streamlit/: .gitignore  app.py
frontend/tests/: test_app.py  test_utils.py
help/: HELP.md
models/: models.json
src/: rag_agent.py  retriever.py  vector_store.py
tests/: test_document_loader.py
utils/src/: main.rs
(+3 files in other folders)
