[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
error = "0.1.9"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0"
tokio = { version = "1.38.0", features = ["full"] }

[[bin]]
name = "file_download_utility"
path = "src/main.rs"